--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Cheyilian</string>
+    <string name="app_name">车亿联</string>
+    <string name="unknown_device">未知设备</string>
+    <string name="ble_not_supported">不支持低功耗蓝牙</string>
+    <string name="error_bluetooth_not_supported">不支持蓝牙</string>
+    <string name="car_speed">车速</string>
+    <string name="rotating_speed">转速</string>
+    <string name="car_speed_unit">km/h</string>
+    <string name="rotating_speed_unit">rpm/min</string>
+    <string name="setting">设置</string>
+    <string name="profile">个人中心</string>
 </resources>
